<resources>
    <string name="app_name">Primera apliacion de android estudio</string>
    <string name="fruta_manzana">Manzana</string>
    <string name="fruta_fresa">Fresa</string>
    <string name="fruta_naranja">Naranja</string>
    <string name="fruta_pera">Pera</string>
    <string name="fruta_platano">Plátano</string>
    <string name="fruta_cereza">Cereza</string>
    <string name="btn_mensaje">Mostrar Mensaje</string>
    <string name="key_prueba">mostrar</string>
    <string name="title_activity_detectar_dispositivos_blue_tooth">DetectarDispositivosBlueTooth
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>