<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StringFrutasVariosIdiomas">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baya" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/fresa" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/manzana" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/fruta_cereza"
                android:textColor="#FAF9F9" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/fruta_fresa"
                android:textColor="#FAF9F9" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/fruta_manzana"
                android:textColor="#FAF9F9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/platanos" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/naranja" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pera" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/key_prueba"
                android:textColor="#FAF9F9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/fruta_naranja"
                android:textColor="#FAF9F9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#04388F"
                android:gravity="center_horizontal"
                android:text="@string/fruta_pera"
                android:textColor="#FAF9F9" />
        </TableRow>
    </TableLayout>
